fixed alignment of what we do

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,14 +115,16 @@ section {
     font-size: 16px;
 }
 
-.into p {
-    text-align: center;
+
+.intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
+
 
 .steps {
     background: #fce138;
@@ -164,6 +166,7 @@ section {
     border-color: #39a6b2;
 }
 
+
 .step h3 {
     flex: 1 30%;
     color: #024e76;
@@ -195,6 +198,7 @@ section {
     line-height: 1.5;
     color: #024e76;
 }
+
 .trainers {
     width: 100%;
     margin: 0 auto;
@@ -225,6 +229,10 @@ section {
 
 .text-right {
     text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
 
 .trainer-bio h3 {
@@ -323,8 +331,4 @@ footer div {
 
 footer a {
     color: #024e76;
-}
-
-.flex-row {
-    display: flex;
 }
